--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Memory Game!</h1>
+    <div id="game-start-screen">
+      <h1 id="title">memory game!!</h1>
+      <button id="start-game-button">Start Game</button>
+      <h3 id="score-val">Current Score: </h3>
+
+      
+    </div>
+    
     <div id="game">
     </div>
     <script src="script.js"></script>
