add protoptype of restart game feats abd live score

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,18 @@
     
     <div id="game">
     </div>
+
+    <div id="live-score-div">
+      <h3>Score:</h3>
+    </div>
+
+    
+
+    <div id = "game-over-screen">
+      <h3>Level Complete!</h3>
+      <button id = "restart-button">Restart</button>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
