--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,8 @@
     </div>
 
     <div id="live-score-div">
-      <h3>Score:</h3>
+      <h3 id="score-header">Score</h3>
+      <h3 id="score-value"></h3>
     </div>
 
     
