--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
     <div id="game-start-screen">
       <h1 id="title">memory game!!</h1>
       <button id="start-game-button">Start Game</button>
-      <h3 id="score-val">Current Score: </h3>
+      <h3 id="best-score-val-header">Best Score</h3>
+      <h3 id="best-score-val" ></h3>
 
       
     </div>
