--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,11 @@
   <body>
     <div id="game-start-screen">
       <h1 id="title">memory game!!</h1>
+      <h3 id = "card-number-header">Please select the number of cards (must be an even number and at least two)</h3>
+      <form id="card-number-form"action="">
+        <label for="num-of-cards">Number of cards:</label>
+        <input type="number" id="num-of-cards" name="num-of-cards" value="12"><br><br>
+      </form>
       <button id="start-game-button">Start Game</button>
       <h3 id="best-score-val-header">Best Score</h3>
       <h3 id="best-score-val" ></h3>
